# pronunciation-scoring-mvp

./: .gitignore  4.36.0  CHANGELOG_FIXES.md  CHINESE_SCORING_README.md  DEPLOYMENT.md  FIX_SUMMARY.md  IMPLEMENTATION.md  IMPLEMENTATION_CHINESE_SCORING.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  INSTALL.md  QUICKSTART.md  README.md  SECURITY_SUMMARY.md  VISUAL_SUMMARY.md  WHISPERX_INTEGRATION.md  WORD_TIMESTAMP_FIXES.md  app.py  check_env.py  config.yaml  constraints.txt  diagnose_script.py  install-test.txt  pyproject.toml  requirements-cpu.txt  requirements-cuda.txt  requirements.txt  test_fixes.py  ui_components_enhanced.py  wishperx.py
assets/standard_audio/: README.md
core/: __init__.py  aligner.py  scorer.py  text_comparator.py  transcriber.py  voice_cloner.py
core/chinese/: __init__.py  acoustic_scorer.py  audio_aligner.py  audio_aligner.py.bak  audio_aligner_enhanced.py  audio_slicer.py  duration_scorer.py  error_classifier.py  final_scorer.py  pause_scorer.py  pinyin_mapper.py  pipeline.py  tone_scorer.py
data/: sentences.json
examples/: README.md
scripts/: __init__.py  download_models.py  test_chinese_modules.py  test_fixes.py  test_system.py  test_whisperx_integration.py  test_word_timestamp_fixes.py
